packages/parser/test/parser/E0138.txt
type Alias =
===== err =====
anonymous:1:13: ParseError: E0138 - Expected type after equals sign
1 | type Alias =
  |             ^
